# erp-empresarial

./: .env.example  .gitignore  2022-11-24_11-47-12_Template (1).docx  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 085c2e6077cd_orcamentos_campos_e_premissa_descricao.py  0eb73cb851c8_orcamentos_refactor_e_caixa_os.py  1d2247a23a29_estoque_minimo_e_movimentos.py  83c121c85d03_initial.py  a4f8c1d2e3b7_abatimento_contas.py  b5c9d2e3f4a1_variaveis_orcamento.py  c289bdf9a8c6_vendedor_comissao_contas_categorias.py  c6d8e3f5a2b1_usuario_telefone_endereco.py  d7e1f4a5b3c2_item_os_estoque.py  e8f1a2b3c4d5_solar_data_orcamento.py  f3a1d9e7b2c5_campos_extras_e_endereco_cliente.py  f9a0b1c2d3e4_premissa_obrigatoria.py  g1h2i3j4k5l6_finance_pagamentos_origem.py  h2i3j4k5l6m7_orcamento_numero_por_empresa.py  i3j4k5l6m7n8_templates_proposta.py
backend/app/: config.py  main.py
backend/app/audit/api/: router.py
backend/app/audit/application/: service.py
backend/app/audit/infrastructure/: orm_models.py
backend/app/clients/api/: router.py  schemas.py
backend/app/clients/infrastructure/: orm_models.py  repository.py
backend/app/commissions/api/: router.py
backend/app/commissions/infrastructure/: orm_models.py
backend/app/finance/api/: router.py
backend/app/finance/application/: pdf_service.py
backend/app/finance/infrastructure/: orm_models.py
backend/app/identity/api/: deps.py  router.py  (+1 more)
backend/app/infrastructure/: database.py
backend/app/shared/: email_service.py  email_templates.py
(+93 files in other folders)
